# synapse-content

./: .dockerignore  .gitignore  README.md  likec4.Dockerfile
proof-of-concepts/02-data-foundations/03-indexing/: README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/02-data-foundations/03-indexing/app/: config.py  demo.py  experiments.py
proof-of-concepts/02-data-foundations/03-indexing/domain/: model.py  ports.py  runner.py
proof-of-concepts/02-data-foundations/03-indexing/infra/: db.py  postgres.py
proof-of-concepts/02-data-foundations/03-indexing/tests/: smoke.py
proof-of-concepts/02-data-foundations/05-encoding-and-evolution/: README.md  pyproject.toml  run
proof-of-concepts/02-data-foundations/05-encoding-and-evolution/app/: demo.py  schemas.py
proof-of-concepts/02-data-foundations/05-encoding-and-evolution/domain/: errors.py  model.py  ports.py
proof-of-concepts/02-data-foundations/05-encoding-and-evolution/infra/: tagged_codec.py
proof-of-concepts/02-data-foundations/05-encoding-and-evolution/tests/: test_evolution.py
proof-of-concepts/03-distributed-data/02-sharding-and-consistent-hashing/: README.md  pyproject.toml  run
proof-of-concepts/03-distributed-data/02-sharding-and-consistent-hashing/app/: demo.py
proof-of-concepts/03-distributed-data/02-sharding-and-consistent-hashing/domain/: cluster.py  ring.py
proof-of-concepts/03-distributed-data/02-sharding-and-consistent-hashing/tests/: test_ring.py
proof-of-concepts/03-distributed-data/03-transactions-and-isolation/: README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/03-distributed-data/03-transactions-and-isolation/app/: config.py  demo.py
proof-of-concepts/03-distributed-data/03-transactions-and-isolation/domain/: experiments.py  model.py  ports.py
proof-of-concepts/03-distributed-data/03-transactions-and-isolation/infra/: postgres.py
proof-of-concepts/03-distributed-data/03-transactions-and-isolation/tests/: smoke.py
proof-of-concepts/04-building-blocks/01-load-balancing-and-gateways/: README.md  pyproject.toml  run
proof-of-concepts/04-building-blocks/01-load-balancing-and-gateways/app/: demo.py
proof-of-concepts/04-building-blocks/01-load-balancing-and-gateways/domain/: backend.py  simulation.py  strategies.py
proof-of-concepts/04-building-blocks/01-load-balancing-and-gateways/tests/: test_balancing.py
proof-of-concepts/04-building-blocks/08-search/: README.md  pyproject.toml  run
proof-of-concepts/04-building-blocks/08-search/app/: corpus.py  demo.py
proof-of-concepts/04-building-blocks/08-search/domain/: cluster.py  index.py  scoring.py  tokenizer.py
proof-of-concepts/04-building-blocks/08-search/tests/: test_search.py
proof-of-concepts/05-patterns/08-event-driven-cqrs-outbox-cdc/: README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/05-patterns/08-event-driven-cqrs-outbox-cdc/app/: config.py  demo.py
proof-of-concepts/05-patterns/08-event-driven-cqrs-outbox-cdc/domain/: model.py  ports.py  services.py
proof-of-concepts/05-patterns/08-event-driven-cqrs-outbox-cdc/infra/: broker.py  postgres.py
proof-of-concepts/05-patterns/08-event-driven-cqrs-outbox-cdc/tests/: smoke.py
proof-of-concepts/06-case-studies/02-ticketmaster/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/06-case-studies/02-ticketmaster/app/: config.py  main.py
proof-of-concepts/06-case-studies/02-ticketmaster/domain/: booking_confirmer.py  errors.py  payment_client.py  ports.py  seat_hold_service.py
proof-of-concepts/06-case-studies/02-ticketmaster/infra/: db.py  payment.py  postgres.py  redis_.py
proof-of-concepts/06-case-studies/02-ticketmaster/sql/: schema.sql
proof-of-concepts/06-case-studies/02-ticketmaster/tests/: concurrency.py  smoke.py
proof-of-concepts/06-case-studies/03-news-feed/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/06-case-studies/03-news-feed/app/: config.py  main.py
proof-of-concepts/06-case-studies/03-news-feed/domain/: celebrity_merger.py  fanout_consumer.py  model.py  ports.py  timeline_fanout.py  timeline_reader.py
proof-of-concepts/06-case-studies/03-news-feed/infra/: db.py  postgres.py  redis_.py
proof-of-concepts/06-case-studies/03-news-feed/sql/: schema.sql
proof-of-concepts/06-case-studies/03-news-feed/tests/: _http.py  fanout.py  smoke.py
proof-of-concepts/06-case-studies/03-news-feed/worker/: main.py
proof-of-concepts/06-case-studies/04-whatsapp/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/06-case-studies/04-whatsapp/app/: config.py  main.py
proof-of-concepts/06-case-studies/04-whatsapp/domain/: connection_registry.py  message_router.py  model.py  ports.py  receipt_tracker.py
proof-of-concepts/06-case-studies/04-whatsapp/infra/: redis_.py
proof-of-concepts/06-case-studies/04-whatsapp/tests/: smoke.py
proof-of-concepts/06-case-studies/05-dropbox/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/06-case-studies/05-dropbox/agent/: chunker.py  manifest_differ.py  model.py  ports.py  sync_engine.py
proof-of-concepts/06-case-studies/05-dropbox/client/: http_client.py
proof-of-concepts/06-case-studies/05-dropbox/server/: config.py  db.py  main.py
proof-of-concepts/06-case-studies/05-dropbox/tests/: smoke.py  test_agent.py
proof-of-concepts/06-case-studies/08-web-crawler/: README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/06-case-studies/08-web-crawler/app/: config.py  main.py
proof-of-concepts/06-case-studies/08-web-crawler/domain/: frontier_scheduler.py  politeness_gate.py  (+2 more)
proof-of-concepts/06-case-studies/09-rate-limiter/: README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/06-case-studies/11-google-docs/: README.md  pyproject.toml  run
proof-of-concepts/06-case-studies/12-stripe-payments/: README.md  docker-compose.yml  pyproject.toml  run
proof-of-concepts/06-case-studies/13-job-scheduler/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run
(+757 files in other folders)
