[project]
name = "poc-indexing"
version = "0.0.0"
description = "Indexing walkthrough POC — system-design-from-first-principles data-foundations/indexing"
requires-python = ">=3.12"
dependencies = ["asyncpg==0.30.0"]

[tool.uv]
package = false

[dependency-groups]
dev = ["mypy==1.13.0"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
files = ["domain", "infra", "app"]

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true
