[project]
name = "poc-whatsapp"
version = "0.0.0"
description = "WhatsApp POC — system-design-from-first-principles case study 04"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "redis==5.2.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["mypy==1.13.0"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
files = ["domain", "infra", "app"]
