[project]
name = "poc-google-docs"
version = "0.0.0"
description = "Google Docs POC — system-design-from-first-principles case study 11 (Operational Transformation)"
requires-python = ">=3.12"
dependencies = []  # pure standard library

[tool.uv]
package = false

[dependency-groups]
dev = ["mypy==1.13.0"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
files = ["domain", "app"]
