[project]
name = "poc-stripe-payments"
version = "0.0.0"
description = "Payment system POC — system-design-from-first-principles case study 12"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["mypy==1.13.0"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
files = ["domain", "infra", "app"]

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true
