[project]
name = "poc-job-scheduler"
version = "0.0.0"
description = "Distributed job scheduler POC — system-design-from-first-principles case study 13"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
    "redis==5.2.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["mypy==1.13.0"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
files = ["domain", "infra", "scheduler", "worker", "app"]

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true
